HOTFIX: Fix transparent navbar dropdown on mobile

--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -21,6 +21,9 @@ $green: #8bc34a !default;
 $teal: #009688 !default;
 $cyan: #00bcd4 !default;
 
+$navbar-bg: #502050;
+$navbar-dropdown-bg: #3a153a;
+
 $heading-color: #141414;
 $content-color: #3d3d3d;
 $main-bg-color: #ffe0ce;
